# compile-time-graph

./: .gitignore  CMakeLists.txt  README.md
examples/: example_complete.cpp  example_petersen.cpp
include/ctgraph/: coloring.hpp  generators.hpp  graph.hpp  properties.hpp  traversal.hpp  utils.hpp
tests/: CMakeLists.txt  test_coloring.cpp  test_generators.cpp  test_graph.cpp  test_properties.cpp  test_traversal.cpp
